--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 
   <base href="/"/>
 
-  <meta name="color-scheme" content="light dark"/>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
@@ -16,7 +15,7 @@
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-1X3O81OQy7nJcxJug3em5OrXV53n4h0&libraries=places"></script>
