--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App</title>
+  <title>Quantu</title>
 
   <base href="/"/>
 
@@ -12,6 +12,7 @@
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <link rel="apple-touch-icon" href="assets/icon/favicon.png"/>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
